# aerofoil

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/aerofoil/: main.py  tf_functions.py
src/aerofoil/modules/build_models/: main.py
src/aerofoil/modules/pressure_points/: custom_pressure_points.py
src/aerofoil/visualisation/: pressure.py
src/xfoil/: formatting.py  inputs.json  main.py  xfoil.py  xfoil_wrapper.py
src/xfoil/data/NACA0012/Re3e+06/: polar_file.txt
