[tool.poetry]
name = "aerofoil"
version = "0.1.0"
description = ""
authors = ["shaun <sefho98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
numpy = "^1.26.2"
pandas = "^2.1.3"
scipy = "^1.11.4"
plotly = "^5.18.0"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.15.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.7"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
